[gd_scene load_steps=6 format=3 uid="uid://dslajcx0t8u3k"]

[ext_resource type="PackedScene" uid="uid://dl4au2fgo071" path="res://ui/garage/header/header_panel.tscn" id="1_m7huh"]
[ext_resource type="Script" uid="uid://dabqtp587rwcn" path="res://ui/garage/garage.gd" id="1_tqyjs"]
[ext_resource type="PackedScene" uid="uid://bttmy3kqvmgjf" path="res://ui/garage/tank_display_panel/tank_display_panel.tscn" id="2_ip7jb"]
[ext_resource type="PackedScene" uid="uid://c13olu340r4yx" path="res://ui/garage/upgrade_panel/upgrade_panel.tscn" id="3_ip7jb"]
[ext_resource type="PackedScene" uid="uid://dct3lf2waqoil" path="res://ui/garage/tank_list/tank_list_panel.tscn" id="3_tqyjs"]

[node name="Garage" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tqyjs")

[node name="HeaderPanel" parent="." instance=ExtResource("1_m7huh")]
unique_name_in_owner = true
layout_mode = 1
grow_horizontal = 1

[node name="UpgradePanel" parent="." instance=ExtResource("3_ip7jb")]
unique_name_in_owner = true
layout_mode = 1
anchor_top = 0.138667
anchor_bottom = 0.694667
offset_left = 0.319992
offset_top = 0.0799942

[node name="TankDisplayPanel" parent="." instance=ExtResource("2_ip7jb")]
unique_name_in_owner = true
layout_mode = 1
anchor_top = 0.138889
anchor_right = 0.3125
anchor_bottom = 0.694445
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
metadata/_edit_use_anchors_ = true

[node name="TankListPanel" parent="." instance=ExtResource("3_tqyjs")]
unique_name_in_owner = true
layout_mode = 1
